--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
                  'mua': 'ሟ', 'me': 'መ', 'mu': 'ሙ', 'mi': 'ሚ', 'ma': 'ማ', 'mee': 'ሜ', 'm': 'ም', 'mo': 'ሞ',
                  'sswa': 'ሧ', 'sse': 'ሠ', 'ssu': 'ሡ', 'ssi': 'ሢ', 'ssa': 'ሣ', 'ssee': 'ሤ', 'ss': 'ሥ', 'sso': 'ሦ', // Note: doubled 'sse' might be tricky, 'ss' for ሥ is common
                  'rwa': 'ሯ', 'ra': 'ረ', 'ru': 'ሩ', 'ri': 'ሪ', 'raa': 'ራ', 'ree': 'ሬ', 're': 'ር', 'ro': 'ሮ',
-                 'swa': 'ሷ', 'sa': 'ሰ', 'su': 'ሱ', 'si': 'ሲ', 'saa': 'ሳ', 'see': 'ሴ', 'se': 'ስ', 'so': 'ሶ',
+                
+                 'swa': 'ሷ', 'se': 'ሰ', 'su': 'ሱ', 'si': 'ሲ', 'sa: 'ሳ', 'see: 'ሴ', 's': 'ስ', 'so': 'ሶ',
+                
                  'shwa': 'ሿ', 'sha': 'ሸ', 'shu': 'ሹ', 'shi': 'ሺ', 'shaa': 'ሻ', 'shee': 'ሼ', 'she': 'ሽ', 'sho': 'ሾ',
                  'qwa': 'ቋ', 'qoa': 'ቈ', // Note: qoa might need specific key combo
                  'qa': 'ቀ', 'qu': 'ቁ', 'qi': 'ቂ', 'qaa': 'ቃ', 'qee': 'ቄ', 'qe': 'ቅ', 'qo': 'ቆ',
