--- a/index.html
+++ b/index.html
@@ -130,6 +130,42 @@
             display: none;
         }
 
+        .keyboard-notice {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #e6f7ff;
+            border: 1px solid #91d5ff;
+            border-radius: 8px;
+            width: 95%;
+            max-width: 1200px;
+            font-size: 1.1em;
+            line-height: 1.6;
+            color: #333;
+        }
+
+        .keyboard-notice h2 {
+            margin-top: 0;
+            color: #0056b3;
+            font-size: 1.3em;
+        }
+
+        .keyboard-notice ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 10px 0 0 0;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 8px;
+        }
+
+        .keyboard-notice li {
+            background-color: #f0faff;
+            padding: 5px 10px;
+            border-radius: 4px;
+            border: 1px solid #bae7ff;
+            text-align: center;
+        }
+
         @media (max-width: 768px) {
             body {
                 padding: 10px;
@@ -173,6 +209,16 @@
             .key-space {
                 flex-grow: 3;
             }
+
+            .keyboard-notice {
+                font-size: 1em;
+                padding: 10px;
+                width: 100%;
+            }
+
+            .keyboard-notice ul {
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            }
         }
 
         @media (max-width: 480px) {
@@ -187,6 +233,9 @@
             textarea {
                 min-height: 120px;
                 font-size: 1.2em;
+            }
+             .keyboard-notice ul {
+                grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
             }
         }
     </style>
@@ -212,7 +261,33 @@
         </div>
 
         <textarea id="output" rows="8" placeholder="Type Amharic here..."></textarea>
-        </div>
+    </div>
+
+    <div class="keyboard-notice">
+        <h2>How to Type Amharic with Your Physical Keyboard:</h2>
+        <p>This keyboard allows you to type Amharic characters using a phonetic approach. Press a **base consonant key** (e.g., 'l' for ለ) followed by a **vowel key** to get the desired Fidel. If you pause after a consonant, you'll get the 6th form (e.g., 'l' for ል).</p>
+        <p>Here are some examples for the 'ለ' family:</p>
+        <ul>
+            <li>**le** = ለ</li>
+            <li>**lu** = ሉ</li>
+            <li>**li** = ሊ</li>
+            <li>**la** = ላ</li>
+            <li>**ly** = ሌ</li>
+            <li>**l** (then pause) = ል</li>
+            <li>**lo** = ሎ</li>
+            <li>**lwa** = ሏ</li>
+        </ul>
+        <p>Other useful mappings:</p>
+        <ul>
+            <li>**X** (Shift+x) = ሸ</li>
+            <li>**V** (Shift+v) = ኀ</li>
+            <li>**Y** (Shift+y) = የ</li>
+            <li>**~** (Tilde) = ጸ</li>
+            <li>**.** = ። (Amharic period)</li>
+            <li>**,** = ፣ (Amharic comma)</li>
+            <li>**!** (Shift+1) = ፩ (Amharic numeral one)</li>
+        </ul>
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
