--- a/index.html
+++ b/index.html
@@ -254,9 +254,7 @@
         <textarea id="output" rows="8" placeholder="Type Amharic here..."></textarea>
     </div>
 
-    <div class="keyboard-info">
-        Type with your physical keyboard, using a phonetic approach:\n
-Type with your physical keyboard, using a phonetic approach. 
+    <div class="keyboard-info"> Using physical keyboard  and phonetic approach:
 le = ለ
 lu= ሉ
 li = ሊ
@@ -265,10 +263,8 @@ ly = ሌ
 l = ል
 lo = ሎ
 lwa = ሏ
--------
 . = ።
 , = ፣           
-------
 h = ሀ | Shift + h = ሐ
 s = ሰ | Shift + s = ሠ
 t = ተ | Shift + t = ጠ
@@ -278,8 +274,10 @@ n = ነ | Shift + n = ኘ
 k = ከ | Shift + k = ኸ
 z = ዘ | Shift + z = ዠ
 p = ፐ | Shift + p = ጰ
---------------------
-l = ለ|m = መ|r = ረ|X = ሸ
+l = ለ
+m = መ
+r = ረ
+X = ሸ
 q = ቀ
 b = በ
 w = ወ
@@ -289,23 +287,6 @@ j = ጀ
 g = ገ
 ~ = ጸ
 f = ፈ
-        \n
-        <span>**le** = ለ</span>
-        <span>**lu** = ሉ</span>
-        <span>**li** = ሊ</span>
-        <span>**la** = ላ</span>
-        <span>**ly** = ሌ</span>
-        <span>**l** = ል</span> (If you pause after a consonant, you'll get the 6th form)
-        <span>**lo** = ሎ</span>
-        <span>**lwa** = ሏ</span>
-        <br>
-        <span>**Shift+x** = ሸ</span>
-        <span>**Shift+v** = ኀ</span>
-        <span>**Shift+y** = የ</span>
-        <span>**Shift+~** = ጸ</span>
-        <span>**Shift+1** = ፩</span>
-        <span>**.** = ።</span>
-        <span>**,** = ፣</span>
     </div>
 
     <script>
