--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ ly = ሌ
 l = ል
 lo = ሎ
 lwa = ሏ
-. = ።
-, = ፣           
+, = ፣  |  shift + , = ጸ  
+. = ።  | shift + . = ፀ        
 h = ሀ | Shift + h = ሐ
 s = ሰ | Shift + s = ሠ
 t = ተ | Shift + t = ጠ
@@ -358,7 +358,7 @@ f = ፈ
                 'V': 'ኀ', 'n': 'ነ', 'N': 'ኘ', 'x': 'አ',
                 'k': 'ከ', 'K': 'ኸ', 'w': 'ወ', '`': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
                 'Y': 'የ', 'd': 'ደ', 'j': 'ጀ', 'g': 'ገ', 'T': 'ጠ', 'C': 'ጨ', 'P': 'ጰ',
-                '~': 'ጸ', 'f': 'ፈ', 'p': 'ፐ'
+                '<': 'ጸ', '>': 'ፀ', 'f': 'ፈ', 'p': 'ፐ'      
             };
 
             for (const keyTrigger in baseKeyTriggers) {
