--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <textarea id="output" rows="8" placeholder="Type Amharic here..."></textarea>
     </div>
 
-    <div class="keyboard-info"> Using physical keyboard  and phonetic approach:
+    <div class="keyboard-info"> Using physical keyboard:
 le = ለ
 lu= ሉ
 li = ሊ
@@ -355,7 +355,7 @@ f = ፈ
 
             const baseKeyTriggers = {
                 'h': 'ሀ', 'l': 'ለ', 'H': 'ሐ', 'm': 'መ', 'S': 'ሠ', 'r': 'ረ', 's': 'ሰ',
-                ';': 'ሸ', 'q': 'ቀ', 'b': 'በ', 'v': 'ቨ', 't': 'ተ', 'c': 'ቸ',
+                ':': 'ሸ', 'q': 'ቀ', 'b': 'በ', 'v': 'ቨ', 't': 'ተ', 'c': 'ቸ',
                 'V': 'ኀ', 'n': 'ነ', 'N': 'ኘ', 'x': 'አ',
                 'k': 'ከ', 'K': 'ኸ', 'w': 'ወ', 'X': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
                 'Y': 'የ', 'd': 'ደ', 'j': 'ጀ', 'g': 'ገ', 'T': 'ጠ', 'C': 'ጨ', 'P': 'ጰ',
