--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@ f = ፈ
                 'ፐ': ['ፐ', 'ፑ', 'ፒ', 'ፓ', 'ፔ', 'ፕ', 'ፖ', 'ፗ']
             };
 
-            const punctuationVirtual = ['፡', '።', '፣', '፤', '፥', '፦', '፧', '፨', '(', ')', '!', '?'];
+            const punctuationVirtual = ['፡',";", '።', '፣', '፤', '፥', '፦', '፧'', '(', ')', '!', '?'];
             const numbersVirtual = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0'];
             const specialKeysVirtual = ['Backspace', 'Space', 'Enter'];
             const symbolsAndEmojis = [
-                '@', '#', '$', '%', '&', '*', '-', '+', '=', '/', '\\', '|', '<', '>',
+                '@', '#', '$', '%', '&', '*', '-', '+', '=', '/', '\\', '|', '<', '>', 
                 '😀', '😂', '👍', '🙏', '❤️'
             ];
 
@@ -356,8 +356,8 @@ f = ፈ
             const baseKeyTriggers = {
                 'h': 'ሀ', 'l': 'ለ', 'H': 'ሐ', 'm': 'መ', 'S': 'ሠ', 'r': 'ረ', 's': 'ሰ',
                 ':': 'ሸ', 'q': 'ቀ', 'b': 'በ', 'v': 'ቨ', 't': 'ተ', 'c': 'ቸ',
-                'V': 'ኀ', 'n': 'ነ', 'N': 'ኘ', 'x': 'አ',
-                'k': 'ከ', 'K': 'ኸ', 'w': 'ወ', 'X': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
+                'V': 'ኀ', 'n': 'ነ', 'N': 'ኘ', 'x': 'አ', 'k': 'ከ', 'K': 'ኸ', 
+                'w': 'ወ', 'X': 'ዐ', 'z': 'ዘ', 'Z': 'ዠ',
                 'Y': 'የ', 'd': 'ደ', 'j': 'ጀ', 'g': 'ገ', 'T': 'ጠ', 'C': 'ጨ', 'P': 'ጰ',
                 '<': 'ጸ', '>': 'ፀ', 'f': 'ፈ', 'p': 'ፐ'      
             };
@@ -385,7 +385,7 @@ f = ፈ
                 baseConsonantToSixthForm[keyTrigger] = variations[5];
             }
 
-            const directMappings = {
+            const directMappings = {'/': '/', '?': '?',   
                 '.': '።', ',': '፣', ';': '፤', ':': '፡', '?': '፧',
                 '!': '፩', '@': '፪', '#': '፫', '$': '፬', '%': '፭',
                 '^': '፮', '&': '፯', '*': '፰', '(': '፱', ')': '፲',
